# FileZilla

./: AUTHORS  ChangeLog  GPL.html  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in  dllcopy.sh  dylibcopy.sh  filezilla.appdata.xml  filezilla.desktop  install.nsi.in  makezip.sh.in  nsis_appid.txt  offer.nsh  process_running.nsh
docs/: filezilla.man  fzdefaults.xml.example  fzdefaults.xml.man  fzputtygen.man  fzsftp.man  iconspecs.htm
go/: uplinkc_custom.go
locales/: Makefile.am  Makefile.in  an.po  ar.po  az.po  bg_BG.po  ca.po  ca_ES@valencia.po  co.po  cs_CZ.po  cy.po  da.po  de.po  el.po  es.po  et.po  eu.po  fa_IR.po  fi_FI.po  filezilla.pot  fr.po  gl_ES.po  he_IL.po  hr.po  hu_HU.po  hy.po  id_ID.po  is.po  it.po  ja_JP.po  ka.po  kab.po  km_KH.po  ko_KR.po  ku.po  ky.po  lo_LA.po  lt_LT.po  lv_LV.po  mk_MK.po  (+21 more)
m4/: ax_append_flag.m4  ax_check_define.m4  ax_cxx_compile_stdcxx.m4  ax_cxx_compile_stdcxx_17.m4  check_atomic.m4  check_clock_gettime.m4  check_libc++.m4  check_steady_clock.m4  check_thread_local.m4  fz_check_pugixml.m4  fz_checkversion.m4  icopyhookw.m4  map_emplace.m4  wxwin.m4
src/: Dependencies.props.example  FileZilla.sdf  FileZilla.sln  Makefile.am  Makefile.in
src/dbus/: Makefile.am  Makefile.in  dbushandler.cpp  dbushandler.h  desktop_notification.cpp  desktop_notification.h  power_management_inhibitor.cpp  power_management_inhibitor.h  session_manager.cpp  session_manager.h  wxdbusconnection.cpp  wxdbusconnection.h  wxdbusmessage.cpp  wxdbusmessage.h
src/engine/: ControlSocket.cpp  ControlSocket.h  FileZillaEngine.cpp  Makefile.am  Makefile.in  backend.cpp  backend.h  commands.cpp  directorycache.cpp  directorycache.h  directorylisting.cpp  directorylistingparser.cpp  directorylistingparser.h  engine.vcxproj  engine_context.cpp  engineprivate.cpp  engineprivate.h  externalipresolver.cpp  filezilla.h  iothread.cpp  iothread.h  local_path.cpp  logging.cpp  logging_private.h  lookup.cpp  lookup.h  misc.cpp  notification.cpp  oplock_manager.cpp  oplock_manager.h  option_change_event_handler.cpp  pathcache.cpp  pathcache.h  proxy.cpp  proxy.h  ratelimiter.cpp  ratelimiter.h  rtt.cpp  rtt.h  server.cpp  (+6 more)
src/engine/ftp/: chmod.cpp  chmod.h  cwd.cpp  cwd.h  delete.cpp  delete.h  filetransfer.cpp  filetransfer.h  ftpcontrolsocket.cpp  ftpcontrolsocket.h  list.cpp  list.h  logon.cpp  logon.h  mkd.cpp  mkd.h  rawcommand.cpp  rawcommand.h  rawtransfer.cpp  rawtransfer.h  rename.cpp  rename.h  rmd.cpp  rmd.h  transfersocket.cpp  transfersocket.h
src/engine/http/: connect.h  digest.cpp  digest.h  filetransfer.cpp  filetransfer.h  httpcontrolsocket.cpp  httpcontrolsocket.h  internalconnect.cpp  internalconnect.h  request.cpp  request.h
src/engine/sftp/: chmod.cpp  chmod.h  connect.cpp  connect.h  cwd.cpp  cwd.h  delete.cpp  delete.h  event.h  filetransfer.cpp  filetransfer.h  input_thread.cpp  input_thread.h  list.cpp  list.h  mkd.cpp  mkd.h  rename.cpp  rename.h  rmd.cpp  rmd.h  sftpcontrolsocket.cpp  sftpcontrolsocket.h
src/engine/storj/: connect.cpp  connect.h  delete.cpp  delete.h  event.h  file_transfer.cpp  file_transfer.h  input_thread.cpp  input_thread.h  list.cpp  list.h  mkd.cpp  mkd.h  resolve.cpp  resolve.h  rmd.cpp  rmd.h  storjcontrolsocket.cpp  storjcontrolsocket.h
src/fzshellext/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  fzshellext.def  fzshellext.rc  fzshellext.vcxproj  resource.h  shellext.cpp  shellext.h  version.rc.in
src/include/: FileZillaEngine.h  Makefile.am  Makefile.in  commands.h  config.h.in  directorylisting.h  engine_context.h  externalipresolver.h  httpheaders.h  libfilezilla_engine.h  local_path.h  logging.h  misc.h  notification.h  option_change_event_handler.h  optionsbase.h  s3sse.h  server.h  serverpath.h  setup.h  sizeformatting_base.h  xml_string_writer.h  xmlutils.h
src/interface/: FileZilla.cpp  LocalListView.cpp  LocalListView.h  LocalTreeView.cpp  LocalTreeView.h  Mainfrm.cpp  Mainfrm.h  Makefile.am  Makefile.in  Options.cpp  Options.h  QueueView.cpp  QueueView.h  RemoteListView.cpp  RemoteListView.h  RemoteTreeView.cpp  RemoteTreeView.h  StatusView.cpp  StatusView.h  aboutdialog.cpp  aboutdialog.h  asksavepassworddialog.cpp  asksavepassworddialog.h  asyncrequestqueue.cpp  asyncrequestqueue.h  aui_notebook_ex.cpp  aui_notebook_ex.h  auto_ascii_files.cpp  auto_ascii_files.h  bookmarks_dialog.cpp  bookmarks_dialog.h  buildinfo.cpp  buildinfo.h  chmoddialog.cpp  chmoddialog.h  clearprivatedata.cpp  clearprivatedata.h  cmdline.cpp  cmdline.h  commandqueue.cpp  (+168 more)
src/interface/resources/: MacInfo.plist.in  Makefile.am  Makefile.in  defaultfilters.xml  filezilla.entitlements  filezilla.rc  version.rc.in  windows_manifest.xml
src/interface/settings/: optionspage.cpp  optionspage.h  optionspage_connection.cpp  optionspage_connection.h  optionspage_connection_active.cpp  optionspage_connection_active.h  optionspage_connection_ftp.cpp  optionspage_connection_ftp.h  optionspage_debug.cpp  (+39 more)
src/pugixml/: Makefile.am  Makefile.in  pugiconfig.hpp  pugixml.vcxproj
src/putty/: COPYING  MERGEREVISION  Makefile.am  Makefile.in  cmdgen.c  cmdline.c  fzprintf.c  fzprintf.h  fzsftp.c  fzsftp.h  fzsftp.vcxproj  import.c  logging.c  misc.c  network.h  pproxy.c  psftp.c  putty.h  puttyps.h  settings.c  sftp.c  ssh.c  ssh.h  ssh2bpp.c  ssh2connection-client.c  ssh2connection.c  ssh2kex-client.c  ssh2transport.c  ssh2userauth.c  sshaes.c  sshcommon.c  sshppl.h  sshpubk.c  utils.c  version.c
src/putty/to do putty/: sshpubk.c  sshsh256.c  sshsh512.c  sshsha.c  version.c
src/putty/unix/: Makefile.am  unix.h  uxagentc.c  uxcons.c  uxnet.c  uxpeer.c  uxsftp.c  uxshare.c  uxstore.c
src/putty/windows/: Makefile.am  psftp.rc  version.rc2  wincons.c  windows_manifest.xml  winmisc.c  winnet.c  winsftp.c  winstore.c  winstuff.h
src/storj/: Makefile.am  Makefile.in  events.hpp  fzstorj.cpp  libuplinkc.h
tests/: Makefile.am  Makefile.in  cmpnatural.cpp  dirparsertest.cpp  localpathtest.cpp  serverpathtest.cpp  test.cpp
(+40 files in other folders)
